[gd_scene load_steps=6 format=3 uid="uid://w564hds6sey0"]

[ext_resource type="Script" path="res://sources/language_tool/lesson_exercises_container.gd" id="1_ov6jd"]
[ext_resource type="PackedScene" uid="uid://dbl3r8426473v" path="res://sources/language_tool/plus_button.tscn" id="2_10y14"]
[ext_resource type="Texture2D" uid="uid://5n02dxd66fw4" path="res://assets/menus/save_button.png" id="3_ssxih"]
[ext_resource type="Texture2D" uid="uid://cs7v0nap5hadi" path="res://assets/menus/save_ok.png" id="4_0353f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwmcw"]
bg_color = Color(0.254902, 0.329412, 0.572549, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="LessonExercisesContainer" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25
script = ExtResource("1_ov6jd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qwmcw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LessonIDLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LessonGPs" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ExerciseButton1" type="OptionButton" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ExerciseButton2" type="OptionButton" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ExerciseButton3" type="OptionButton" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveButton" parent="HBoxContainer" instance=ExtResource("2_10y14")]
layout_mode = 2

[node name="TextureRect" parent="HBoxContainer/SaveButton" index="0"]
texture = ExtResource("3_ssxih")

[node name="OKTexture" type="TextureRect" parent="HBoxContainer/SaveButton/TextureRect" index="0"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(512, 512)
texture = ExtResource("4_0353f")

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2

[connection signal="item_selected" from="HBoxContainer/HBoxContainer/ExerciseButton1" to="." method="_on_exercise_button_1_item_selected"]
[connection signal="item_selected" from="HBoxContainer/HBoxContainer/ExerciseButton2" to="." method="_on_exercise_button_2_item_selected"]
[connection signal="item_selected" from="HBoxContainer/HBoxContainer/ExerciseButton3" to="." method="_on_exercise_button_3_item_selected"]
[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]

[editable path="HBoxContainer/SaveButton"]
